Bug fixed
            //inputList.addAll(Arrays.stream(input.replaceAll("\\s+$", "").split(" ")).toList());
            inputList.addAll(Arrays.stream(input.replaceAll("\\s+$", "").split(" ")).collect(Collectors.toList()));